# re-vanced

./: README.md
examplepatches/4831c0/custom-revanced-patches/: .gitignore  CHANGELOG.md  settings.gradle.kts
examplepatches/Alexvbp/f1tv-patches/: gradle.properties  settings.gradle.kts
examplepatches/AmpleReVanced/revanced-api/: CHANGELOG.md  Dockerfile
examplepatches/AmpleReVanced/revanced-cli/: build.gradle.kts
examplepatches/AmpleReVanced/revanced-manager-compose/: gradle.properties  settings.gradle.kts
examplepatches/AmpleReVanced/revanced-patcher/: README.md  build.gradle.kts
examplepatches/Aunali321/revanced-downloader-plugins/: .gitignore  .releaserc  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  package-lock.json  proguard-rules.pro  settings.gradle.kts
examplepatches/Aunali321/revanced-web-patcher-backend/: .gitignore  Dockerfile  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
examplepatches/BakasuraRCE/bakasura-patches/: gradle.properties  patches-bundle.json
examplepatches/Faith001/revanced-molten-glass/: README.md  gradle.properties  settings.gradle.kts
examplepatches/Graywizard888/Enhancify/: enhancify  install.sh  main.sh  sources.json
examplepatches/HZbutcoding/sn-patching/: CHANGELOG.md  local.properties  settings.gradle.kts
examplepatches/Jman-Github/ReVanced-Patch-Bundles/: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
examplepatches/MaebashiRamens/mtga/: .gitignore  (+8 more)
examplepatches/The412Banner/bannerhub-revanced/native/xserver_shim/: CMakeLists.txt  README.md  xserver_shim.c
(+2039 files in other folders)
